--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
+<img src="images/grannleveransen-logo.png"><br>
 Hello World Isolations-Hjälpen Sverige!
 
 <a href="https://www.guaana.com/challenge/oKDiham57QdtpzZcn/results/hLMyjWXBH675rb3qC/dY8yzBcWi86cKnzBd/main">https://www.guaana.com/challenge/oKDiham57QdtpzZcn/results/hLMyjWXBH675rb3qC/dY8yzBcWi86cKnzBd/main</a>
