title and classes

--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+	<title>Grannleveransen</title>
 	<script src="grannleveransen.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOxsbI1PYUHS7iDMIQuivzYrWxxQFo9FQ&libraries=drawing&callback=initMap" async defer></script>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<style>
 		#map {
 		  height: 500px;
@@ -9,7 +12,7 @@
 	</style>
 </head>
 <body>
-<img src="images/grannleveransen-logo.png"><br>
+<img alt="logo" class="logo" src="images/grannleveransen-logo.png"><br>
 Hello World Isolations-Hjälpen Sverige!<br><br>
 <a href="https://www.guaana.com/challenge/oKDiham57QdtpzZcn/results/hLMyjWXBH675rb3qC/dY8yzBcWi86cKnzBd/main">https://www.guaana.com/challenge/oKDiham57QdtpzZcn/results/hLMyjWXBH675rb3qC/dY8yzBcWi86cKnzBd/main</a><br><br>
 <a href="https://github.com/ErikLarsson82/isolations-hjalpen">https://github.com/ErikLarsson82/isolations-hjalpen</a><br><br>
