--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
 <body>
 <img alt="logo" class="logo" src="images/grannleveransen-logo.png"><br>
 <hr class="main-hum-hum">
-<h1 class="welcome-message">Välkommen till <i>grannleveransen.se</i></h1>
+<h1 class="welcome-message">Välkommen till <i>grannleveranse.se</i></h1>
 <p class="welcome-message">Vi matchar ihop dig som behöver hjälp eftersom du är isolerad hemma under Coronakrisen med dig som kan hjälpa till med att handla eller leveranser.</p>
 <div id="menu-main" class="box">
 	<h3>Välj vem du är</h3>
@@ -30,7 +30,7 @@
 <div id="menu-helper" class="box" style="display: none;">
 	<h3>Välj var du befinner dig på kartan</h3>
 	<div class="menu-helper">
-		<p>Dra och släpp den lila markören på kartan. Du väljer ett område och inte din exakta position så att du kan känna dig trygg och anonym.</p>
+		<p>Dra och släpp den lila markören på kartan. Du väljer ett område och du behöver inte välja din exakta position så att du kan känna dig trygg och anonym.</p>
 		<input type="button" value="Anmäl mig som hjälpare på denna position" onClick="setState('helper-done')">
 	</div>
 </div>
