Adding alt attributes to the images/icons

--- a/static/index.html
+++ b/static/index.html
@@ -18,11 +18,11 @@
 	<h3>Välj vem du är</h3>
 	<div class="menu-main">
 		<span>
-			<img src="images/lifebuoy-icon.png">
+			<img alt="lifebuoy" src="images/lifebuoy-icon.png">
 			<input type="button" value="Hjälpare" onClick="setState('helper')">
 		</span>
 		<span>
-			<img src="images/helping-hand-icon.png">
+			<img alt="helping-hand" src="images/helping-hand-icon.png">
 			<input type="button" value="Jag behöver hjälp" onClick="setState('helpee')">
 		</span>
 	</div>
