--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <link rel="icon" href="favicon.ico" />
     <meta
       name="description"
       content="Hack the Crisis Sweden prototype for matchmaking - grannleveransen.se"
     />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <title>grannleveransen.se</title>
   </head>
