Refactor of build system and react compiling aswell as express hosting

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,11 @@
       content="Hack the Crisis Sweden prototype for matchmaking - grannleveransen.se"
     />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link href="/App.css" rel="stylesheet" type="text/css">
     <title>grannleveransen.se</title>
   </head>
   <body>
-    <noscript>-</noscript>
     <div id="root"></div>
+    <script src="/bundle.js"/></script>
   </body>
 </html>
